2005-04-13 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/ActionMenuToolbar/ActionGroup.chs.pp,
	gtk/Graphics/UI/Gtk/ActionMenuToolbar/RadioAction.chs.pp,
	gtk/Graphics/UI/Gtk/Buttons/RadioButton.chs,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/RadioMenuItem.chs,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/RadioToolButton.chs.pp: sort out
	the radio button API and docs. Change the recently added modules to
	match the API of the existing radio modules ie the groups are not
	given as lists but by represetative members. Improve the docs to try
	and better explain this slightly odd API style.

	* Makefile.am,
	gtk/Graphics/UI/Gtk/Display/ProgressBar.chs,
	gtk/Graphics/UI/Gtk/Display/ProgressBar.chs.pp: rename to .pp in
	preparation for adding new methods.

	* gtk/Graphics/UI/Gtk/Display/ProgressBar.chs.pp: add a new property
	and its associated getter and setter methods.

	* gtk/Graphics/UI/Gtk/Entry/Entry.chs.pp: export method that was
	already implemented but accidentally not exported.

	* gtk/Graphics/UI/Gtk/MenuComboToolbar/Menu.chs.pp: add new method.

2005-04-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: change the way gtk2hs-config.h is used during .hsc ->
	.hs transforms. It is now only used during the cpp phase and is not
	output into the .hs file as a {-# INCLUDE "gtk2hs-config.h" #-}
	pragma. This means that it does not used at compile time (and so
	compiling -fvia-C does not complain that gtk2hs-config.h cannot be
	found).

	* gtk/Graphics/UI/Gtk/MenuComboToolbar/ToolButton.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/MenuToolButton.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ToggleToolButton.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/RadioToolButton.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/SeparatorMenuItem.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/SeparatorToolItem.chs.pp: add
	several new modules, the *ToolButton ones that go with the 
	"action-based menu and toolbar api" and a couple other simple modules.